# page_annotator

./: .gitignore  README.md  config.yaml  launch_browser.py  pyproject.toml  pywebview_launcher.py  requirements.txt
chrome_custom/: manifest.json  open_window.js
data/: sample_annotations.csv  sample_documents.csv
examples/: basic.yml  funder_evaluation.yml  landscape_review.yml
page_annotator/: __init__.py  app.py  cli.py  configuration.py  data_store.py  playwright_cli.py  playwright_launcher.py  pywebview_cli.py  pywebview_launcher.py
page_annotator/static/: app.js  styles.css
page_annotator/templates/: index.html  pdf_viewer.html
