[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "page-annotator"
version = "0.1.0"
description = "Interactive web-based page annotation tool"
readme = "README.md"
authors = [{name = "Page Annotator", email = "contact@example.com"}]
requires-python = ">=3.9"
dependencies = [
  "Flask==3.0.2",
  "PyYAML==6.0.1",
  "requests==2.31.0",
  "beautifulsoup4==4.12.3",
  "pywebview==6.1",
  "playwright==1.56.0"
]

[project.scripts]
page-annotator = "page_annotator.cli:main"
page-annotator-pywebview = "page_annotator.pywebview_cli:main"
page-annotator-playwright = "page_annotator.playwright_cli:main"

[tool.setuptools.packages.find]
include = ["page_annotator"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"page_annotator" = [
  "templates/*.html",
  "static/*",
  "static/**/*"
]
